# rust-freetype-example

./: Cargo.toml  README.md
examples/: render.rs  sdl2.rs
src/: bitmap.rs  face.rs  font.rs  freetype.rs  harfbuzz.rs  lib.rs
src/freetype/: face.rs  init.rs
src/harfbuzz/: buffer.rs  font.rs  shape.rs
