[package]
name = "freetyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sdl2"]
sdl2 = ["dep:sdl2"]

[dependencies]
freetype = "0.7.2"
harfbuzz-sys = "0.6.1"
sdl2 = { version = "0.36.0", optional = true }

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"

[[example]]
name = "render"

[[example]]
required-features = ["sdl2"]
name = "sdl2"